--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Source/ThirdParty/googletest/msvc/gtest/Debug/
 Source/ThirdParty/googletest/msvc/gtest.opensdf
 Source/ThirdParty/googletest/msvc/gtest.sdf
 Source/ThirdParty/googletest/msvc/gtest.v12.suo
+*.jbf
