--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="CatchTests">
       <UniqueIdentifier>{5264d4d1-c136-425a-b529-f3ac408c2367}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Assets\Gui\Stroke">
+      <UniqueIdentifier>{84a3835c-428f-4394-8591-b2957993e95c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Source\GSPlayNotes.cpp">
@@ -229,25 +232,10 @@
     <Text Include="..\..\..\..\Assets\Gui\keyboard.txt">
       <Filter>Assets\Gui</Filter>
     </Text>
-    <Text Include="..\..\..\..\Assets\Gui\stroke-test-1.txt">
-      <Filter>Assets\Gui</Filter>
-    </Text>
-    <Text Include="..\..\..\..\Assets\Gui\stroke-test-2.txt">
-      <Filter>Assets\Gui</Filter>
-    </Text>
     <Text Include="..\..\..\..\Assets\Gui\gs_pages.txt">
       <Filter>Assets\Gui</Filter>
     </Text>
     <Text Include="..\..\..\..\Assets\Gui\page_musical_term.txt">
-      <Filter>Assets\Gui</Filter>
-    </Text>
-    <Text Include="..\..\..\..\Assets\Gui\stroke-cross-1.txt">
-      <Filter>Assets\Gui</Filter>
-    </Text>
-    <Text Include="..\..\..\..\Assets\Gui\stroke-cross-2.txt">
-      <Filter>Assets\Gui</Filter>
-    </Text>
-    <Text Include="..\..\..\..\Assets\Gui\stroke-tick-1.txt">
       <Filter>Assets\Gui</Filter>
     </Text>
     <Text Include="..\..\..\..\Assets\Gui\gs_main_menu.txt">
@@ -255,6 +243,24 @@
     </Text>
     <Text Include="..\..\..\..\Assets\Gui\gs_title.txt">
       <Filter>Assets\Gui</Filter>
+    </Text>
+    <Text Include="..\..\..\..\Assets\Gui\stroke-cross-1.txt">
+      <Filter>Assets\Gui\Stroke</Filter>
+    </Text>
+    <Text Include="..\..\..\..\Assets\Gui\stroke-cross-2.txt">
+      <Filter>Assets\Gui\Stroke</Filter>
+    </Text>
+    <Text Include="..\..\..\..\Assets\Gui\stroke-spiral-1.txt">
+      <Filter>Assets\Gui\Stroke</Filter>
+    </Text>
+    <Text Include="..\..\..\..\Assets\Gui\stroke-test-1.txt">
+      <Filter>Assets\Gui\Stroke</Filter>
+    </Text>
+    <Text Include="..\..\..\..\Assets\Gui\stroke-test-2.txt">
+      <Filter>Assets\Gui\Stroke</Filter>
+    </Text>
+    <Text Include="..\..\..\..\Assets\Gui\stroke-tick-1.txt">
+      <Filter>Assets\Gui\Stroke</Filter>
     </Text>
   </ItemGroup>
 </Project>
